[package]
name = "uranuspace"
version = "0.1.0"
edition = "2024"

[[bin]]
name="cat"
path="cat/src/main.rs"

[[bin]]
name="cd"
path="cd/src/main.rs"

[[bin]]
name="ls"
path="ls/src/main.rs"

[[bin]]
name="pwd"
path="pwd/src/main.rs"

[[bin]]
name="touch"
path="touch/src/main.rs"

[lib]
name="uranuspace"
path="lib/src/lib.rs"

[dependencies]
libc = "0.2.174"
