[package]
name = "uranuspace"
version = "0.1.0"
edition = "2024"

[lib]
name="uranuspace"
path="lib/src/lib.rs"

[[bin]]
name="cat"
path="utils/cat/src/main.rs"

[[bin]]
name="cd"
path="utils/cd/src/main.rs"

[[bin]]
name="ls"
path="utils/ls/src/main.rs"

[[bin]]
name="pwd"
path="utils/pwd/src/main.rs"

[[bin]]
name="touch"
path="utils/touch/src/main.rs"

[dependencies]
libc = "0.2.174"
